work around for ie8 partial issue, inventory photo spacing fix, text-alignment on edit content page

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -241,9 +241,16 @@
   }
 }
 
+#edit-content {
+  margin-bottom: 25px; 
+  text-align: left;
+}
 
-
-
+.edit-box {
+   width: 90%; 
+   height: 250px; 
+   margin-bottom: 20px;
+}
 
 #add-user-button {
   float: right; 
@@ -314,7 +321,8 @@
 }
 
 #inventory-title {
-  margin-top: 20px;
+  margin-top: 0px;
+  padding-top: 20px;
 }
 
 #inventory-edit-icon {
